--- a/catalog/view/theme/default/template/product/review.twig
+++ b/catalog/view/theme/default/template/product/review.twig
@@ -6,14 +6,14 @@
       <strong>{{ review.author }}</strong>
       <span class="tag {{ review.rating >= 4 ? 'is-success' : '' }}{{ review.rating >= 3 and review.rating < 4 ? 'is-warning' : '' }}{{ review.rating < 3 ? 'is-danger' : '' }} is-light">
         <span class="icon mr-1">
-          <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
             <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
           </svg>
         </span>
         {{ review.rating }}
       </span>
     </span>
-    <span class="text-right is-size-7">{{ review.date_added }}</span>
+    <span class="text-right is-size-6 has-text-grey">{{ review.date_added }}</span>
   </div>
   <div class="panel-block is-block">
     <p class="has-text-grey">{{ review.text }}</p>
@@ -22,7 +22,7 @@
       <p>
         <span class="tag is-primary is-light is-medium mr-1">
           <span class="icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1rem" height="1rem" fill="currentColor" viewBox="0 0 16 16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
               <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
             </svg>
           </span>
