--- a/catalog/view/theme/default/css/main.css
+++ b/catalog/view/theme/default/css/main.css
@@ -224,10 +224,9 @@ iframe {
   content: none;
 }
 
-.product-info .tabs,
 #product-images {
   position: sticky;
-  top: 110px;
+  top: 120px;
   z-index: 1;
 }
 
@@ -241,11 +240,6 @@ iframe {
   position: relative;
   height: 100%;
   z-index: -1;
-}
-
-#product-page .product-images .lSSlideOuter {
-  position: sticky;
-  top: 65px;
 }
 
 .product-card,
@@ -336,44 +330,6 @@ input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
 input[type="search"]::-webkit-search-results-decoration {
   -webkit-appearance: none;
-}
-
-.lSSlideOuter .lSPager.lSpg>li a {
-  background-color: rgb(0 0 0 / 30%);
-  height: 10px;
-  width: 10px;
-  z-index: 1;
-  transition: all 0.2s ease;
-}
-
-.lSSlideOuter .lSPager.lSpg>li.active a,
-.lSSlideOuter .lSPager.lSpg>li:hover a {
-  background-color: #0055d4;
-  width: 20px;
-}
-
-.lg-backdrop {
-  background-color: #fff;
-}
-
-.lg-toolbar {
-  background-color: rgb(0 0 0 / 0%);
-}
-
-.lg-sub-html {
-  background: #f7f7f7;
-  color: #333;
-}
-
-.lg-toolbar .lg-icon:hover {
-  color: #333;
-}
-
-.lg-actions .lg-next,
-.lg-actions .lg-prev {
-  background-color: rgb(0 0 0 / 15%);
-  border-radius: 10px;
-  color: #fff;
 }
 
 .is-absolute {
@@ -734,6 +690,7 @@ footer .scroll-top-trigger.shown {
   .container>.columns {
     margin-left: 0;
     margin-right: 0;
+    padding: 0 0.75rem;
   }
 
   .breadcrumb.py-4 {
@@ -909,15 +866,6 @@ footer .scroll-top-trigger.shown {
   #product-page #content>.tabs {
     top: 0px;
     margin: 0 -0.75rem;
-  }
-
-  .product-cards .column,
-  .blog-cards .column {
-    padding-top: 0;
-  }
-
-  .product-info .tabs {
-    top: 0.75rem;
   }
 }
 
