--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -28,7 +28,7 @@
       {% endif %}
       <div id="content" class="{{ class }}" itemscope itemtype="https://schema.org/Product">
         <h1 class="title is-3 has-text-weight-normal" id="heading" itemprop="name">{{ heading_title }}</h1>
-        <div class="tabs has-background-white mb-3">
+        <div class="tabs has-background-white mb-5">
           <ul>
             <li class="has-background-white is-active" data-target="#heading">
               <a>{{ tab_general }}</a>
@@ -827,7 +827,18 @@
       speed: 750
     });
 
-    Fancybox.bind("[data-fancybox]");
+    Fancybox.bind("#product-images [data-fancybox]", {
+      Thumbs : {
+        type: "classic"
+      },
+      Toolbar: {
+        display: {
+          left: ["infobar"],
+          middle: [],
+          right: ["close"],
+        },
+      },
+    });
   });
 
 </script>
