--- a/admin/view/template/extension/module/extheme.twig
+++ b/admin/view/template/extension/module/extheme.twig
@@ -38,7 +38,7 @@
               <div class="col-sm-10">
                 <select name="module_extheme_directory" id="input-directory" class="form-control">
                   {% for directory in directories %}
-                  {% if directory == theme_default_directory %}
+                  {% if directory == current_template_directory %}
                   <option value="{{ directory }}" selected="selected">{{ directory }}</option>
                   {% else %}
                   <option value="{{ directory }}">{{ directory }}</option>
