--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -223,6 +223,7 @@
                       </div>
                     </div>
                     <div class="col-sm-1 text-right">
+                      <button type="button" class="handle btn btn-info"><i class="fa fa-sort"></i></button>
                       <button type="button" class="btn btn-danger" onclick="$(this).parents('.row').remove()"><i class="fa fa-trash"></i></button>
                     </div>
                   </div>
@@ -1717,6 +1718,12 @@
 
   let row = $('#social-medias input[type="hidden"]').length ? 0 : $('#social-medias > .row').length;
 
+  $('#social-medias').sortable({
+    items: '.row',
+    handle: '.handle',
+    animation: 350
+  });
+
   function addSocialContact(){
 
     if($('#social-medias input[type="hidden"]').length) {
@@ -1750,6 +1757,7 @@
       html += '</div>';
     html += '</div>';
     html += '<div class="col-sm-1 text-right">';
+      html += '<button type="button" class="handle btn btn-info"><i class="fa fa-sort"></i></button>';
       html += '<button type="button" class="btn btn-danger" onclick="$(\'#media-row-' + row  + '\').remove();"><i class="fa fa-trash"></i></button>';
     html += '</div>';
     html += '</div>'
